appId: io.getstream.rnvideosample
---
- runScript: js/setup.js
- launchApp
#- waits for ios system alert to pop up, then waits for maestro to handle it
- runScript:
    file: js/sleep.js
    env:
      seconds: 5
#- Log in as a custom user
- extendedWaitUntil:
    visible: ${output.pages.login.loginButton}
    timeout: 120000
- tapOn: ${output.pages.login.customUserInputField}
- inputText: ${output.pages.login.userName}
- tapOn: ${output.pages.login.loginButton}
#- choose Meeting flow
- extendedWaitUntil:
    visible: ${output.pages.chooseFlow.meeting}
    timeout: 120000
- tapOn: ${output.pages.chooseFlow.meeting}
#- Create a new call
- tapOn: ${output.pages.joinMeeting.callIdInputField}
- inputText: ${output.callId}
- tapOn: ${output.pages.joinMeeting.startCallButton}
#- Join the call
- tapOn: ${output.pages.lobby.joinButton}
#- Assert that user is alone in the call
- extendedWaitUntil:
    visible:
        text: "1"
        id: ${output.pages.activeCall.participantsCount}
    timeout: 80000

# TODO: Following steps are commented out until further investigation due to flakiness of Stream Video Buddy CLI on GitHub Actions

#- Add 5 participants to the call via Stream Video Buddy CLI
# - runScript:
#     file: js/videoBuddy.js
#     env:
#       callId: ${output.callId}
#       duration: ${output.callDuration}
#       userCount: 5
#       camera: true
# #- Assert that there are 6 participants in the call
# - extendedWaitUntil:
#     visible:
#         text: "6"
#         id: ${output.pages.activeCall.participantsCount}
#     timeout: 80000
# #- Leave the call
# - tapOn:
#     id: ${output.pages.activeCall.hangupButton}
# #- Log out
# - tapOn:
#     id: ${output.pages.joinMeeting.chooseFlowButton}
# - tapOn:
#     id: ${output.pages.joinMeeting.logOutButton}
# - assertVisible: ${output.pages.joinMeeting.signOutModalTitle}
# - tapOn: ${output.pages.joinMeeting.confirmSignOutButton}
# #- Assert that user is logged out
# - assertVisible: ${output.pages.login.customUserInputField}
